# bananaramapy

./: .Rbuildignore  .gitignore  DESCRIPTION  LICENSE  LICENSE.md  NAMESPACE  README.md  _pkgdown.yml  pkgdown.yml  plan.md  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yaml  generate.yaml
R/: bananarama-package.R  bananarama.R  parse.R  sort.R  utils.R
articles/: randomness.html
demo/: bananarama.yaml
man/: bananarama-package.Rd  bananarama.Rd
src/bananarama/: __init__.py  ci.py  cli.py  config.py  generate.py  images.py  tasks.py
src/bananarama/costs/: __init__.py  log.py  pricing.py
src/bananarama/costs/data/: prices.toml
src/bananarama/models/: __init__.py  base.py  flux.py  gemini.py  openai.py  registry.py  sizing.py
src/bananarama/templates/: __init__.py
src/bananarama/templates/data/: dark.yaml  editorial.yaml  minimal.yaml  photorealistic.yaml  retro.yaml
tests/: test_ci.py  test_config.py  test_cost_log.py  test_costs.py  test_generate.py  test_images.py  test_registry.py  test_sizing.py  test_templates.py  testthat.R
tests/integration/: conftest.py  test_providers.py
tests/testthat/: test-bananarama.R  test-parse.R  test-sort.R
vignettes/: bananarama.qmd
vignettes/articles/: randomness.qmd  randomness.yml  styles.qmd
